tests/negative/gold/bad_literal7_test.gold
tests/negative/bad_literal7_test.toit:8:9: error: Invalid number literal
  print 0_.123456
        ^~~~~~~~~
tests/negative/bad_literal7_test.toit:9:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
